# AoC2024

./: CMakeLists.txt  README.md  main.cpp
include/: ComputeAoC.hpp  Day1.hpp  Day2.hpp  FactoryDay.hpp
src/: Day1.cpp  Day2.cpp
tests/: CMakeLists.txt  Day1.cpp  Day2.cpp
